--- a/Styles/Buttons.xaml
+++ b/Styles/Buttons.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
-        <Setter Property="FontFamily" Value="Microsoft PhagsPa" />
-        <Setter Property="FontSize" Value="13" />
         <Setter Property="FontWeight" Value="Bold" />
-        <Setter Property="Foreground" Value="#fff" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="FontFamily" Value="Microsoft PhagsPa" />
+        <Setter Property="Foreground" Value="#fff" />
+        <Setter Property="FontSize" Value="13" />
         <Setter Property="Background" Value="DimGray" />
         <Setter Property="Height" Value="28" />
         <Setter Property="Padding" Value="0,-1,0,0" />
@@ -15,6 +15,11 @@
         BasedOn="{StaticResource {x:Type Button}}"
         TargetType="{x:Type Button}">
         <Setter Property="Background" Value="#15BD6F" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#10B96A" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
 
