--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Buttons.xaml" />
         <ResourceDictionary Source="TextBlock.xaml" />
+        <ResourceDictionary Source="CheckBox.xaml" />
+        <ResourceDictionary Source="ComboBox.xaml" />
+        <ResourceDictionary Source="Buttons.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
