--- a/Styles/TextBlock.xaml
+++ b/Styles/TextBlock.xaml
@@ -4,9 +4,9 @@
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="Microsoft PhagsPa" />
+        <Setter Property="Foreground" Value="#fff" />
         <Setter Property="FontSize" Value="13" />
         <Setter Property="FontWeight" Value="Regular" />
-        <Setter Property="Foreground" Value="#fff" />
     </Style>
     <Style
         x:Key="TextBlock_Right"
@@ -20,8 +20,16 @@
         BasedOn="{StaticResource {x:Type TextBlock}}"
         TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="18" />
-        <Setter Property="FontWeight" Value="Black" />
+        <Setter Property="FontWeight" Value="ExtraBold" />
         <Setter Property="Foreground" Value="#FFEDBD3A" />
+    </Style>
+    <Style
+        x:Key="TextBlock_SideMenu"
+        BasedOn="{StaticResource {x:Type TextBlock}}"
+        TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="Margin" Value="20,0,0,0" />
     </Style>
 
 </ResourceDictionary>
