--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -25,6 +25,7 @@
     Background="Transparent"
     MouseDown="Window_MouseDown"
     ResizeMode="CanResizeWithGrip"
+    WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
 
@@ -112,14 +113,6 @@
                                     x:Name="country"
                                     Grid.Row="1"
                                     Grid.Column="1"
-                                    Height="20"
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Center"
-                                    Background="#161517"
-                                    BorderThickness="0"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="13"
-                                    Foreground="#fff"
                                     ItemsSource="{Binding CountryList}"
                                     SelectedValue="{Binding SelectedCountry}">
                                     <i:Interaction.Triggers>
@@ -139,14 +132,6 @@
                                     x:Name="region"
                                     Grid.Row="2"
                                     Grid.Column="1"
-                                    Height="20"
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Center"
-                                    Background="#161517"
-                                    BorderThickness="0"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="13"
-                                    Foreground="#fff"
                                     ItemsSource="{Binding RegionList}"
                                     SelectedValue="{Binding SelectedRegion}">
                                     <i:Interaction.Triggers>
@@ -166,14 +151,6 @@
                                     x:Name="package"
                                     Grid.Row="3"
                                     Grid.Column="1"
-                                    Height="20"
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Center"
-                                    Background="#161517"
-                                    BorderThickness="0"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="13"
-                                    Foreground="#fff"
                                     ItemsSource="{Binding PackageList}"
                                     SelectedValue="{Binding SelectedPackage}">
                                     <i:Interaction.Triggers>
@@ -234,45 +211,18 @@
                                 <CheckBox
                                     Grid.Row="1"
                                     Grid.ColumnSpan="2"
-                                    Padding="15,0,0,2"
-                                    HorizontalAlignment="Left"
-                                    Content="{lex:Loc insert_credentials_and_data}"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="13"
-                                    FontWeight="Regular"
-                                    Foreground="White" />
-                                <CheckBox
-                                    Grid.Row="2"
-                                    Grid.ColumnSpan="2"
-                                    Padding="15,0,0,2"
-                                    HorizontalAlignment="Left"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="13"
-                                    FontWeight="Regular"
-                                    Foreground="White">
+                                    Content="{lex:Loc insert_credentials_and_data}" />
+                                <CheckBox Grid.Row="2" Grid.ColumnSpan="2">
                                     <TextBlock Text="{lex:Loc copy_settings_previous_airac}" TextWrapping="Wrap" />
                                 </CheckBox>
-                                <CheckBox
-                                    Grid.Row="3"
-                                    Grid.ColumnSpan="2"
-                                    Padding="15,0,0,2"
-                                    HorizontalAlignment="Left"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="13"
-                                    FontWeight="Regular"
-                                    Foreground="White">
+                                <CheckBox Grid.Row="3" Grid.ColumnSpan="2">
                                     <TextBlock Text="{lex:Loc run_custom_ps_script}" TextWrapping="Wrap" />
                                 </CheckBox>
                             </Grid>
                         </Grid>
                     </TabItem>
                     <TabItem Header="Settings" Visibility="Collapsed">
-                        <TextBlock
-                            FontFamily="Microsoft PhagsPa"
-                            FontSize="18"
-                            FontWeight="Black"
-                            Foreground="#FFEDBD3A"
-                            Text="{lex:Loc settings}" />
+                        <TextBlock Style="{DynamicResource TextBlock_Header}" Text="{lex:Loc settings}" />
                     </TabItem>
                 </TabControl>
             </Grid>
@@ -315,15 +265,7 @@
                                     VerticalAlignment="Center"
                                     RenderOptions.BitmapScalingMode="HighQuality"
                                     Source="/Views/settings.png" />
-                                <TextBlock
-                                    Margin="20,0,0,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="16"
-                                    FontWeight="Bold"
-                                    Foreground="White"
-                                    Text="{lex:Loc dashboard}" />
+                                <TextBlock Style="{DynamicResource TextBlock_SideMenu}" Text="{lex:Loc dashboard}" />
                             </StackPanel>
                         </Button>
                         <Button
@@ -342,15 +284,7 @@
                                     VerticalAlignment="Center"
                                     RenderOptions.BitmapScalingMode="HighQuality"
                                     Source="/Views/settings.png" />
-                                <TextBlock
-                                    Margin="20,0,0,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    FontFamily="Microsoft PhagsPa"
-                                    FontSize="16"
-                                    FontWeight="Bold"
-                                    Foreground="White"
-                                    Text="{lex:Loc settings}" />
+                                <TextBlock Style="{DynamicResource TextBlock_SideMenu}" Text="{lex:Loc settings}" />
                             </StackPanel>
                         </Button>
                     </StackPanel>
