Fix styling (issue still persists, see description)
- TextBlock.xaml sets styles for all elements which shouldn't be like that
- Solution: Maybe creating own TextBlock control?

--- a/Styles/TextBlock.xaml
+++ b/Styles/TextBlock.xaml
@@ -6,7 +6,12 @@
         <Setter Property="FontFamily" Value="Microsoft PhagsPa" />
         <Setter Property="Foreground" Value="#fff" />
         <Setter Property="FontSize" Value="13" />
-        <Setter Property="FontWeight" Value="Regular" />
+    </Style>
+    <Style
+        x:Key="TextBlock_Bold"
+        BasedOn="{StaticResource {x:Type TextBlock}}"
+        TargetType="{x:Type TextBlock}">
+        <Setter Property="FontWeight" Value="Bold" />
     </Style>
     <Style
         x:Key="TextBlock_Right"
