--- a/Styles/Buttons.xaml
+++ b/Styles/Buttons.xaml
@@ -1,10 +1,14 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:hc="https://handyorg.github.io/handycontrol">
     <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="FontFamily" Value="Microsoft PhagsPa" />
         <Setter Property="Foreground" Value="#fff" />
         <Setter Property="FontSize" Value="13" />
+        <Setter Property="hc:BorderElement.CornerRadius" Value="10" />
         <Setter Property="Background" Value="DimGray" />
         <Setter Property="Height" Value="28" />
         <Setter Property="Padding" Value="0,-1,0,0" />
@@ -14,7 +18,7 @@
         x:Key="Button_Green"
         BasedOn="{StaticResource {x:Type Button}}"
         TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="#15BD6F" />
+        <Setter Property="Background" Value="#FF109457" />
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="#10B96A" />
