--- a/Styles/TextBox.xaml
+++ b/Styles/TextBox.xaml
@@ -1,16 +1,18 @@
-﻿<ResourceDictionary
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:hc="https://handyorg.github.io/handycontrol">
-    <Style BasedOn="{StaticResource {x:Type ComboBox}}" TargetType="{x:Type ComboBox}">
-        <Setter Property="Height" Value="20" />
+    <Style BasedOn="{StaticResource {x:Type TextBox}}" TargetType="{x:Type TextBox}">
+        <Setter Property="Margin" Value="0,0,0,0" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Background" Value="#161517" />
         <Setter Property="FontFamily" Value="Microsoft PhagsPa" />
         <Setter Property="Foreground" Value="#fff" />
-        <Setter Property="hc:BorderElement.CornerRadius" Value="10" />
         <Setter Property="FontSize" Value="13" />
+        <Setter Property="Background" Value="#161517" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="hc:BorderElement.CornerRadius" Value="10" />
     </Style>
+
 </ResourceDictionary>
